fix win64 build error

--- a/meson.build
+++ b/meson.build
@@ -21,6 +21,8 @@ dependencies = [libavcodec,
                 libswscale]
 
 subdir('src')
-subdir('test')
+if host_machine.system() != 'windows'
+  subdir('test')
+endif
 
 install_headers('include/libmconn.h')
